# mealbot

./: .env.example  .gitignore  README.md  devPlan.md  pyproject.toml
src/mealbot/: __init__.py  config.py  models.py
src/mealbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mealbot/bot/: __init__.py
src/mealbot/coop/: __init__.py
src/mealbot/grocery/: __init__.py  aggregator.py  formatter.py
src/mealbot/planner/: __init__.py  generator.py  nutrition.py  seasonal.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_generator.py
tests/unit/: __init__.py  test_aggregator.py  test_formatter.py  test_models.py  test_nutrition.py  test_seasonal.py
