[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealbot"
version = "0.1.0"
description = "A Telegram bot for personalized meal planning and Coop.ch shopping automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Elise Hautefaye"}
]

dependencies = [
    "anthropic>=0.34.0",
    "python-telegram-bot>=21.0",
    "playwright>=1.40.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mealbot = "mealbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
